--- a/1T_EED_MarcosDelRioSabarit.css/estilos.css
+++ b/1T_EED_MarcosDelRioSabarit.css/estilos.css
@@ -6,4 +6,7 @@ p {
 .clase {
     background-color: tomato;
     color: darkblue;
+    border: cyan;
+    border-style: dashed;
+    border-radius: 10%;
 }
